--- a/Modacity/Modacity/ViewController/AskFeedbacks/feedback.storyboard
+++ b/Modacity/Modacity/ViewController/AskFeedbacks/feedback.storyboard
@@ -195,7 +195,7 @@ how to improve? Connect with one of our experts.</string>
                                     <constraint firstAttribute="width" constant="223" id="PSc-J5-ZL0"/>
                                 </constraints>
                                 <segments>
-                                    <segment title="Pro Boost"/>
+                                    <segment title="Ask Expert"/>
                                     <segment title="Feedback"/>
                                 </segments>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -269,8 +269,8 @@ how to improve? Connect with one of our experts.</string>
                                     <action selector="onBack:" destination="qz1-pT-38s" eventType="touchUpInside" id="hcU-CK-lis"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pro Boost" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cjA-KN-bEI">
-                                <rect key="frame" x="152.33333333333334" y="57" width="70.666666666666657" height="19"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ask Expert" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cjA-KN-bEI">
+                                <rect key="frame" x="148.66666666666666" y="57" width="78" height="19"/>
                                 <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
